--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -136,6 +136,275 @@ h1,h2,h3,h4 {
 }
 
 /********************************************************************/
+/* Main content for all pages. */
+#main {
+
+	& > header:first-of-type,
+	body.post & article header:first-of-type
+	{
+		padding: 4rem 0 0;
+		display:flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		min-height: 30vh;
+		background-color: rgba(0,0,0,0.0325);
+		background-image: url('/assets/img/tiles/hypnotize.png');
+		background-size:200px;
+
+		@media screen and (min-width: 900px) {
+			min-height: 50vh;
+		}
+
+		hgroup {
+			max-width: 900px;
+			margin: 0 auto;
+			width: 100%;
+			border-bottom: 2rem solid white;
+			padding: 0 2rem;
+		}
+
+		h1 {
+			font-size: 3rem;
+			@media screen and (min-width: 900px) {
+			font-size: 5rem;
+			}
+			margin-top:0;
+			line-height: 1.2;
+		}
+	}
+
+	.content {
+		max-width: 900px;
+		margin: 0 auto;
+		padding: 0 2rem 2rem;
+	}
+}
+
+/********************************************************************/
+/* Homepage Styles */
+#newsletter {
+	padding: 1rem;
+	text-align: center;
+	font-size: 1.5rem;
+	background-color: rgba(0,0,0,0.125);
+}
+
+section.feature {
+	display:flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	min-height: 400px;
+	padding: 2rem;
+
+	&:nth-child(even) {
+	}
+
+	figure {
+		display:block;
+		margin:0;
+		padding:0;
+		position: relative;
+		img {
+			max-width: 100%;
+			width: auto;
+			height: auto;
+		}
+		figcaption {
+			position:absolute;
+			bottom:0;
+			left:0;
+		}
+	}
+
+	&#updates {
+		h2 {
+			margin:0;
+			font-size: 1.2rem;
+		}
+
+		h3,p {
+			margin:0;
+		}
+
+		ul {
+			list-style:none;
+			margin:0;
+			padding:0;
+			font-size: 1rem;
+		}
+
+		#upcoming-events {
+			li + li {
+				margin-top: 1rem;
+			}
+
+			a {
+				text-decoration:none;
+				display:flex;
+				color: var(--uvalib-text-dk-grey);
+				align-items: center;
+				gap: 1rem;
+			}
+			time {
+				border: 1px solid #999;
+				border-top-color: #ddd;
+				border-left-color: #ddd;
+				text-align: center;
+				width: 3rem;
+				padding: 0.5rem;
+
+				span {
+					display:block;
+					margin:0;
+					line-height: 1;
+					&.day {
+						font-weight: bold;
+						font-size: 1.75rem;
+					}
+				}
+			}
+			strong {
+				font-size: 1.2rem;
+			}
+		}
+
+		#recent-posts li + li:before {
+
+		}
+		#recent-activity li + li:before {
+			display:block;
+			content: ' ';
+			margin: 1rem auto;
+			width: 20px;
+			background: var(--uvalib-secondary-web-orange);
+			height: 3px;
+		}
+	}
+
+	@media screen and (min-width: 700px) {
+	flex-direction: row;
+	gap: 2rem;
+
+		&#updates {
+			gap: 1rem;
+			min-height: auto;
+			div {
+				justify-content: flex-start;
+
+			}
+		}
+
+		&:nth-child(even) {
+			flex-direction: row-reverse;
+		}
+
+		div {
+			display: flex;
+			flex:1;
+			flex-direction: column;
+		}
+
+		figure {
+			flex:1;
+		}
+	}
+
+	&#lab-space-and-makerspace {
+		flex-wrap: wrap;
+		h2 {
+			width: 100%;
+		}
+		div:not(:first-child) {
+			flex: 1;
+		}
+	}
+}
+
+
+/********************************************************************/
+/* Projects browse */
+.our-projects section {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 2rem;
+}
+
+.our-projects section h2 {
+	width: 100%;
+}
+
+.our-projects section a {
+	width: 20%;
+	text-decoration:none;
+}
+
+.our-projects section a p {
+	font-size: 1rem;
+	margin:0;
+}
+
+/* People browse */
+body.people .gallery {
+	display:flex;
+	gap: 1rem;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	a {
+		flex: 1 1 100%;
+		max-width: 48%;
+		@media screen and (min-width: 800px) {
+			max-width: 23%;
+		}
+		display:inline-block;
+		text-decoration:none;
+		color: var(--uvalib-text-dk-grey);
+
+		p {
+			margin:0;
+			line-height:1;
+		}
+		.person-name {
+			font-weight: bold;
+			margin-bottom: 0.25rem;
+		}
+		.person-role{
+			font-size: 1rem;
+		}
+	}
+
+}
+
+#alumni ul {
+	list-style:none;
+	margin:0;
+	padding: 0;
+	columns: 2;
+	@media screen and (min-width: 800px) {
+		columns: 4;
+
+	}
+	font-size: 1rem;
+
+	a {
+		text-decoration:none;
+		display:block;
+		border-bottom: 1px solid rgba(0,0,0,0.1);
+		padding: 0.5rem 1rem;
+	}
+}
+
+/* Footer */
+#footer {
+	padding: 1rem;
+	p {
+		margin:0;
+	}
+
+}
+
+/********************************************************************/
 /* Navigation */
 #global-navigation {
 	ul {
@@ -664,7 +933,7 @@ ul .event-stats-box {
     background-color: #f2d9ff;
     border-radius: 10px;
   }
-  
+
 /********************************************************************/
 /** Individual post pages */
 .post__credits {
@@ -743,4 +1012,3 @@ margin-top: 15px;
 .post_crosspost::before {
 	content: "\2192";
 }
-
