People, styling, update, post category fixes...
* Returns to & styles individual post page footer author info & styled citation
* makes every post have 1 of 3 new categories
* limits bio page post lists to category.essay post type
* styles crosspost text
* adds list of names (linked to bio pages) on update individual pages, with new update yaml "people" that can accept lists of people the update involves
* links /blog recent posts updates to their individual update page, since those now have additional info (list of folks involved in update)

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -74,10 +74,10 @@ layout: page
 
 
 <!-- list of blog posts by person -->
-		{% assign author_posts = site.posts | where: "author", page.slug %}
+		{% assign author_posts = site.posts | where: "author", page.slug | where: "category", "essay" %}
 
 		<div class="person__posts">
-			<h2 class="person-posts__title">All Posts by {{ page.first_name }}</h2>
+			<h2 class="person-posts__title">All Research Posts by {{ page.first_name }}</h2>
 			{% if author_posts.size >= 1 %}
 		    <ul class="person-posts__list">
 		    {% for post in author_posts %}
