Citation legibility, work template improvements
- make citation text below posts more legible
- reorg /_work template for defaults at top

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -651,7 +651,7 @@ ul .bio-stats-box {
 	position: relative;
 	font-family:  monospace;
 	font-weight: 200;
-	color: var(--uvalib-secondary-light-gray);
+	color: var(--uvalib-text-dk-grey);
 	span {
 		display: block;
 		padding: 1.5rem 0 .5rem 0;
