removing fig-caption position:absolute unhides them

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -346,9 +346,9 @@ section.feature {
 			height: auto;
 		}
 		figcaption {
-			position:absolute;
 			bottom:0;
 			left:0;
+			font-style: italic;
 		}
 	}
 
