--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,8 +8,8 @@ Navigation
 Footer
 Main content for all pages
 Homepage Styles
-Projects browse
-Individual projects pages
+/work projects browse
+Individual work projects pages
 People browse
 Individual people (bio) pages
 Use the Lab page: weekly calendar hours styling
@@ -402,7 +402,7 @@ section.feature {
 
 
 /********************************************************************/
-/* Projects browse */
+/* /work projects browse */
 .our-projects section {
 	display: flex;
 	justify-content: space-between;
@@ -426,7 +426,7 @@ section.feature {
 }
 
 /********************************************************************/
-/* Individual projects pages */
+/* Individual work projects pages */
 .project-stats-box {
 	position: relative;
 	border: 4px solid var(--uvalib-secondary-light-gray);
